# PythonProjjF1

./: .gitignore  README.md  ReadMe  Streamlit.html  Weather App · Streamlit.html  main.py  pyproject.toml  secrets.toml  weather_logic.py
.streamlit/: secrets.toml  weather_api.py
Streamlit_files/: gtm.js.הורדה  heap-269788835.js.הורדה  saved_resource.html
