[tool.poetry]
name = "pythonprojf1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.53.1"
plotly = "^6.5.2"
weather-service = "^0.1.0"
weather-api = "^1.0"
pytest = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
